Replace health route with events boilerplate routes and add event management APIs, also added openapi route
